force-app/main/forceea/objects/FObjectBig__b/FObjectBig__b.object-meta.xml
<CustomObject>
    <label>FObjectBig</label>
    <pluralLabel>FObjectBig</pluralLabel>
</CustomObject>