force-app/main/forceea/objects/FObjectBig__b/fields/TestInteger__c.field-meta.xml
<CustomField>
    <fullName>TestInteger__c</fullName>
    <label>TestInteger</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>