force-app/main/forceea/objects/FObjectBig__b/fields/TestLookup__c.field-meta.xml
<CustomField>
    <fullName>TestLookup__c</fullName>
    <label>TestLookup</label>
    <referenceTo>FObjectOne__c</referenceTo>
    <relationshipName>TestBigs</relationshipName>
    <type>Lookup</type>
</CustomField>