force-app/main/forceea/objects/FObjectBig__b/fields/TestPartition__c.field-meta.xml
<CustomField>
    <fullName>TestPartition__c</fullName>
    <label>TestPartition</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>