force-app/main/forceea/objects/FObjectBig__b/fields/TestText__c.field-meta.xml
<CustomField>
    <fullName>TestText__c</fullName>
    <label>TestText</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>