force-app/main/forceea/objects/FObjectBig__b/fields/TestTextArea__c.field-meta.xml
<CustomField>
    <fullName>TestTextArea__c</fullName>
    <label>TestTextArea</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>